<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name"> نجدي
       للذبائح</string>
    <string name="welcome_msg">WELCOME TO \n NAJDI</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number_5x">Mobile Number(5xxxxxxxx)</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_optional">Name (Optional)</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in"> Sign In</string>
    <string name="sign_to_continue">Sign In to continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="and_privacy_policy">Privacy policy</string>
    <string name="log_in">Log In</string>
    <string name="dont_t_have_an_account_sign_up">Dont\'t have an account?</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="checkout">Checkout</string>
    <string name="order_complete">Order Complete</string>
    <string name="select_options">Select Options</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="head">Head &amp; Legs</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total">Total</string>
    <string name="available">Available</string>
    <string name="quantity">Quantity</string>
    <string name="clear">clear</string>
    <string name="ok">OK</string>
    <string name="continue_txt">Continue shopping</string>
    <string name="cancel">Cancel</string>
    <string name="thank_you_order_has_been_received">Thank you order has been received.</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_number">Order Number</string>
    <string name="date">Date</string>
    <string name="subtotal">SubTotal</string>
    <string name="our_bank_accounts"><u>Our Bank Accounts</u></string>
    <string name="our_bank_accounts_drawer">Our Bank Accounts</string>
    <string name="invalid_phone_no">phone no is invalid!</string>
    <string name="invalid_pass">invalid password</string>
    <string name="password_error">Password must be at least 6 characters long</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="category">Category</string>
    <string name="product_details">Product Details</string>
    <string name="currency">SAR</string>
    <string name="cart">Cart</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="permission_denied">Permission denied</string>
    <string name="service_not_available">service is not available</string>
    <string name="invalid_lat_long">invalid lat long</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="name">Name</string>
    <string name="phone">phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="please_fill">please fill all the required fields</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="your_order">Your order</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="place_order">Place Order</string>
    <string name="order_status">Order History</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="about_us">About Us</string>
    <string name="profile">Profile</string>
    <string name="order_history">Order History</string>
    <string name="language">Language</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log out</string>
    <string name="enter_valid_code">Please enter correct code</string>
    <string name="pending">pending</string>
    <string name="completed">completed</string>
    <string name="no_order_history_msg">At this moment you don\'t have an order history. Start ordering with one of your favourite product</string>
    <string name="verify_mobile_no">Verifying Mobile Number</string>
    <string name="one_time_psd">One Time Password sent to this mobile number</string>
    <string name="please_enter_it_below">Please Enter it Below</string>
    <string name="didn_t_get_the_sms">Didn\'t get the SMS?</string>
    <string name="resend_code_in">Resend Code in %s</string>
    <string name="resend_code">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="update_cart_label">Update Cart</string>
    <string name="account_no">Account No</string>
    <string name="arabic">ع</string>
    <string name="english_lang">E</string>
    <string name="empty_cart_msg">Your cart is currently empty</string>
    <string name="about_us_page">Najdi is a new and easy way to buy meat online.\n\n
        It provides different types of sheep and goats of different sizes, slaughtered, prepared, packed and delivered to your home.\n\n
        Our products include: Nuami, Harri, Baladi Goat and Swakni.\n\n
        We offer a wide range of succulent lamb which will accentuate and redefine the meat palate.\n\n
        \u2022 We provide door-step service on the same day.\n\n
\u2022 Cash On Delivery (COD) is used for payment. Online payment will be added in the future.\n\n
\u2022 We are available 9:00 AM to 7:00 PM, seven days a week.\n\n
\u2022 Last order will be taken till 4:00 PM to deliver on the same day.\n\n
\u2022 Order placed After 4:00 PM will be considered for next day delivery.
</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="direct_bank_transer_msg">Make you payment direct into our bank account. Please use your order ID as the payment references, Your order will not be shipped until funds have credited to our account; "</string>
    <string name="please_feel">Please feel free to send us any questions</string>
    <string name="message">Message</string>
    <string name="phone_no">0533552201, 0558080240</string>
    <string name="web_address">www.najdisheep.com</string>
    <string name="send">Send</string>
    <string name="cutting_way">Cutting Way</string>
    <string name="legs">Packaging</string>
    <string name="size">Size</string>
    <string name="order_received">Order Received</string>
    <string name="product_added_success">product has been to added to your cart successfully</string>
    <string name="product_updated_success">product has been to updated to your cart successfully</string>
    <string name="change_password">Change Password</string>
    <string name="change_mobile_number">Change Mobile Number</string>
    <string name="save">Save</string>
    <string name="my_account">My Account</string>
    <string name="change_no_msg">To change your mobile number, Please enter the  new one below.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="update">Update</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="andStr">and</string>
    <string name="forgot_your_password">Forgot Your Password</string>
    <string name="please_otp_msg">Please enter your mobile number, You will receive  a One-Time-Password via SMS</string>
    <string name="submit">Submit</string>
    <string name="password_mismatched">Password mismatch!</string>
    <string name="building_number">Building number</string>
    <string name="direct_transfer_title">Direct Bank Transfer</string>
    <string name="not_available">Not Available</string>
    <string name="sale">special offer</string>
    <string name="profile_succes_msg">profile has been updated successfully</string>
    <string name="verification_matched">The code is correct</string>
    <string name="message_success">Your message has been sent. We will contact you soon</string>
    <string name="mobile_no_success_msg">Mobile number has been changed successfully</string>
    <string name="delete_msg">Are you sure want to delete?</string>
    <string name="minced_meat">Minced Meat Type</string>
    <string name="enter_correct_code">Please enter the correct code</string>
    <string name="quantity_updated">Quantity updated</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="order_no">Order No %s</string>
    <string name="incorrect_password_arabic">كلمة المرور خاطئة</string>
    <string name="item_removed">Item removed</string>
    <string name="verification_password_sent_to">Verification password sent to %s</string>
    <string name="password_upd_msg">Password updated successfully</string>
    <string name="iban">IBAN</string>
    <string name="password_does_not_matched">Password does not match</string>
    <string name="enter_your_location" tools:ignore="MissingTranslation">Enter your location</string>
    <string name="coupon">Coupon</string>
    <string name="space" translatable="false">\u0020</string>
    <string name="select_shipping_address_from_map" >Select shipping address from Map</string>
    <string name="guest_user_title">Guest User</string>
    <string name="login_to_continue" >Please login to continue</string>
    <string name="shortcut_label" >Orders</string>
    <string name="shortcut_bank" >Bank Accounts</string>
    <string name="notes">Notes</string>
    <string name="add_your_notes">Add your notes</string>
    <string name="select_city" >Select City</string>
    <string name="enter_valid_phone_no" >Enter the valid mobile no</string>
    <string name="save_to_fav" >Save as Favourite Location</string>
    <string name="location_saved_msg" >Your Location saved successfully</string>
    <string name="plz_valid_fields" >Please enter the valid fields</string>
    <string name="upgrade_title" >Upgrade your App</string>
    <string name="upgrade_msg" >\" recommends that you upgrade to the latest version\"</string>
    <string name="tax" >Tax</string>
    <string name="select_appr_option" >Select option</string>
    <string name="mobile_no_error">Mobile no must contains 9 digits (5xxxxxxxx)</string>
    <string name="invalid_email">invalid email address</string>
    <string name="no_network_msg">No internet connection!</string>
</resources>
