<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/products"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/products" />

        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_filter_list_black_24dp"
            android:title="@string/category" />

        <item
            android:id="@+id/city"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/city" />

        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/ic_baseline_vpn_key_24"
            android:title="@string/sign_in" />

        <item
            android:id="@+id/shopping_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shopping_cart" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />


        <item
            android:id="@+id/bank_account"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/our_bank_accounts_drawer" />

        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/order_history" />


        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/language"
            app:actionLayout="@layout/menu_lan_selc" />

        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/log_out" />

    </group>


</menu>
