<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_eighty">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_actiob_bar" />

        <LinearLayout
            android:id="@+id/step_parent_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/step_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <ProgressBar
                    android:id="@+id/progress_id"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="2.5dp"
                    android:layout_gravity="center"
                    android:background="@color/gray_press"
                    android:indeterminate="false"
                    android:indeterminateOnly="false"
                    android:max="100"
                    android:progressBackgroundTintMode="src_atop"
                    android:progressBackgroundTint="@color/green_press" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/one"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/circle_selector"
                        android:gravity="center"
                        android:text="@string/one"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/two"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/circle_selector"
                        android:enabled="false"
                        android:gravity="center"
                        android:text="@string/two"
                        android:textColor="@color/circle_text_selector"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/three"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/circle_selector"
                        android:enabled="false"
                        android:gravity="center"
                        android:text="@string/three"
                        android:textColor="@color/circle_text_selector"
                        android:textStyle="bold" />
                </RelativeLayout>
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/one_tile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_details"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/two_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/checkout"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/three_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/order_complete"
                    android:textColor="@color/black" />

            </RelativeLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/step_parent_lyt"/>

    </RelativeLayout>
</layout>