<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.najdi.android.najdiapp.home.viewmodel.ChangeMobileNoViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_eighty"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/change_mobile_number"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mobile_number"
            android:textColor="@color/grey_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="+966"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="1.2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center|start"
                android:text="@={viewModel.oldMobileNo}"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_no_msg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/new_mobile_number" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="+966"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <View
                android:layout_width="1.2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@null"
                android:gravity="center|start"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:maxLength="9"
                android:hint="@string/mobile_number_5x"
                android:text="@={viewModel.newMobileNo}"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/grey_text" />

        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_corner_solid_green_selector"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</layout>